Fix: Images not found and return of dates with scheduling null!